--- a/Insurgency/Saved/Config/WindowsServer/Game.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game.ini
@@ -1,24 +1,28 @@
 [/Script/Insurgency.INSCoopMode]
 bUseVehicleInsertion=True
-bBotsUseHumanLoadouts=True
+bBotsUseHumanLoadouts=False
 bLoseWhenAllPlayersDead=True
 bRestrictClassByPlayerLevel=False
-FriendlyBotQuota=6
+FriendlyBotQuota=4
 bForceSoloWaves=True
 SoloWaves=35
 MinimumEnemies=9
 MaximumEnemies=9
+InitialSupply=200
+MaximumSupply=200
 
 [/Script/AIModule.AIController]
 bAdvancedTactics=True
 
 [/Script/Insurgency.INSCheckpointGameMode]
+InitialSupply=200
+MaximumSupply=200
 bBots=True
 DefaultReinforcementWaves=35
 SoloEnemies=9
 MinimumEnemies=16
 MaximumEnemies=16
-FriendlyBotQuota=6
+FriendlyBotQuota=4
 RespawnDPR=0
 RespawnDelay=1
 
@@ -40,6 +44,8 @@ bKillerInfo=True
 bKillerInfoRevealDistance=True
 
 [/Script/Insurgency.INSSurvivalGameMode]
+InitialSupply=200
+MaximumSupply=200
 BotDPRRespawnFirst=0
 BotDPRRespawnFinal=0.2
 AIDifficulty=0.5
@@ -54,10 +60,27 @@ MaximumBotsPerCompletedObjective=0
 ExtractionSpawnStopTime=25
 
 [/Script/Insurgency.INSOutpostGameMode]
+InitialSupply=200
+MaximumSupply=200
 MinimumBotsPerAdditionalObjective=1
 MaximumBotsPerAdditionalObjective=1
 MinimumEnemies=10
 MaximumEnemies=18
 BotDPRMinimumTimeRemaining=25
 AIDifficulty=0.5
+
+[/CustomScenario/Blueprints/Operation/KWIOperationGamemode.KWIOperationGamemode_C]
+NumWaves=11
+bBotMover=1
+bHardcoreRespawn=1
+FallbackPrimary=/Game/Game/Actors/Weapons/AssaultRifle/BP_Firearm_M4A1.BP_Firearm_M4A1_C
+bHardcoreHUD=0
+CrateRand=0.3
+CrateMax=999
+InitialSupply=200
+MaximumSupply=200
+bUseVehicleInsertion=True
+PreRoundTime=15
+bBots=1
+FriendlyBotQuota=4
 
