--- a/Insurgency/Saved/Config/WindowsServer/Game_Standard.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Standard.ini
@@ -1,1 +1,95 @@
+[/Script/Insurgency.INSCoopMode]
+bUseVehicleInsertion=True
+bBotsUseHumanLoadouts=False
+bLoseWhenAllPlayersDead=True
+bRestrictClassByPlayerLevel=False
+FriendlyBotQuota=4
+bForceSoloWaves=True
+SoloWaves=35
+MinimumEnemies=9
+MaximumEnemies=9
+InitialSupply=200
+MaximumSupply=200
+
+[/Script/AIModule.AIController]
+bAdvancedTactics=True
+
+[/Script/Insurgency.INSCheckpointGameMode]
+InitialSupply=200
+MaximumSupply=200
+bBots=True
+DefaultReinforcementWaves=35
+SoloEnemies=9
+MinimumEnemies=16
+MaximumEnemies=16
+FriendlyBotQuota=4
+RespawnDPR=0
+RespawnDelay=1
+
+[/Script/Insurgency.INSMultiplayerMode]
+InitialSupply=200
+MaximumSupply=200
+bBots=True
+PostRoundTime=5
+PostGameTime=5
+bAllowThirdPersonSpectate=True
+bAllowDeathCamera=True
+
+[/Script/Insurgency.INSGameMode]
+bAllowRestrictedAreas=True
+bDeadSay=True
+bKillFeed=True
+bKillFeedSpectator=True
+bKillerInfo=True
+bKillerInfoRevealDistance=True
+
+[/Script/Insurgency.INSSurvivalGameMode]
+InitialSupply=200
+MaximumSupply=200
+BotDPRRespawnFirst=0
+BotDPRRespawnFinal=0.2
+AIDifficulty=0.5
+bUseSpecialWaves=False
+MinimumEnemies=10
+MaximumEnemies=10
+BotSpawnDelay=10
+BotRespawnDelay=1
+BotRepositionDelay=1
+MinimumBotsPerCompletedObjective=0
+MaximumBotsPerCompletedObjective=0
+ExtractionSpawnStopTime=25
+;SurvivalWaveConfigAssetPath=/Zombies/Game/Data/GameModes/Zombies_Survival.Zombies_Survival
+;SurvivalNightTimeWaveConfigAssetPath=/Zombies/Game/Data/GameModes/Zombies_Survival.Zombies_Survival
+;SurvivalWaveConfigAssetPath=/Game/Game/Data/Gamemodes/SurvivalWaveConfig_Default.SurvivalWaveConfig_Default
+;SurvivalNightTimeWaveConfigAssetPath=/Game/Game/Data/Gamemodes/SurvivalWaveConfig_Night.SurvivalWaveConfig_Night
+
+[/Script/Insurgency.INSOutpostGameMode]
+InitialSupply=200
+MaximumSupply=200
+MinimumBotsPerAdditionalObjective=1
+MaximumBotsPerAdditionalObjective=1
+MinimumEnemies=10
+MaximumEnemies=18
+BotDPRMinimumTimeRemaining=25
+AIDifficulty=0.5
+bUseSpecialWaves=True
+;SpecialWaveFrequency=1
+;OutpostWaveConfigAssetPath=/Game/Game/Data/Gamemodes/OutpostWaveConfig_Default.OutpostWaveConfig_Default
+;OutpostWaveConfigAssetPath=/Zombies/Game/Data/GameModes/Zombies_Outpost.Zombies_Outpost
+
+[/CustomScenario/Blueprints/Operation/KWIOperationGamemode.KWIOperationGamemode_C]
+NumWaves=11
+bBotMover=1
+bHardcoreRespawn=1
+FallbackPrimary=/Game/Game/Actors/Weapons/AssaultRifle/BP_Firearm_M4A1.BP_Firearm_M4A1_C
+bHardcoreHUD=0
+CrateRand=0.3
+CrateMax=999
+InitialSupply=200
+MaximumSupply=200
+bUseVehicleInsertion=True
+PreRoundTime=15
+bBots=1
+FriendlyBotQuota=4
+
 
