--- a/Insurgency/Saved/Config/WindowsServer/Game_Standard.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Standard.ini
@@ -34,6 +34,8 @@ PostRoundTime=5
 PostGameTime=5
 bAllowThirdPersonSpectate=True
 bAllowDeathCamera=True
+bAwardSupplyInstantly=True
+SupplyGainFrequency=40
 
 [/Script/Insurgency.INSGameMode]
 bAllowRestrictedAreas=True
@@ -44,24 +46,59 @@ bKillerInfo=True
 bKillerInfoRevealDistance=True
 
 [/Script/Insurgency.INSSurvivalGameMode]
-InitialSupply=200
-MaximumSupply=200
+bSoloGame=True
+SoloRoundTime=1800
+RoundTimeExtension=1800
+SoloRoundTimeExtension=1800
+RoundTime=1800
+bForceSoloWaves=1
+SoloWaves=20
+NumWaves=5
+ExtractionObjectiveHoldTime=150
+BotRepositionDelay=5
+DefaultReinforcementWaves=20
+MinimumEnemies=20
+MaximumEnemies=30
+BotMinimumSpawnRange=5000
+BotMaximumSpawnRange=6000
+BotRespawnDistance=8000
+BotSpawnDelay=10.0
+BotRespawnDelay=15.0
+MinimumBotsPerCompletedObjective=0.5
+MaximumBotsPerCompletedObjective=0.5
 BotDPRRespawnFirst=0
-BotDPRRespawnFinal=0.2
-AIDifficulty=0.5
-bUseSpecialWaves=False
-MinimumEnemies=10
-MaximumEnemies=10
-BotSpawnDelay=10
-BotRespawnDelay=1
-BotRepositionDelay=1
-MinimumBotsPerCompletedObjective=0
-MaximumBotsPerCompletedObjective=0
-ExtractionSpawnStopTime=25
-;SurvivalWaveConfigAssetPath=/Zombies/Game/Data/GameModes/Zombies_Survival.Zombies_Survival
-;SurvivalNightTimeWaveConfigAssetPath=/Zombies/Game/Data/GameModes/Zombies_Survival.Zombies_Survival
-;SurvivalWaveConfigAssetPath=/Game/Game/Data/Gamemodes/SurvivalWaveConfig_Default.SurvivalWaveConfig_Default
-;SurvivalNightTimeWaveConfigAssetPath=/Game/Game/Data/Gamemodes/SurvivalWaveConfig_Night.SurvivalWaveConfig_Night
+BotDPRRespawnFinal=0
+
+[/ScaleSurvival/Mutators/ScaleSurvival.ScaleSurvival_C]
+StartRespawnDelay=18.0
+FinalRespawnDelay=12.0
+ExtractionRespawnDelay=6.0
+SpawnRatioAtStart=0.4
+RespawnRatio=0.4
+RespawnRatioDelay=15.0
+ExtractionRespawnRatio=0.3
+ExtractionSecondWaveDelay=40.0
+ExtractionSecondWaveRatio=0.8
+ExtractionSecondWaveRespawnDelay=2
+bSaveProgress=1
+Timing=0.2
+bRandomize=0
+MinRatio=0.3
+MaxRatio=0.5
+RandomWaveChance=1.1
+RandomWaveMultipler=2.0
+MinTime=30
+MaxTime=50
+RandomWaveText=Incoming wave!
+
+[/FortuneSoldier/Mutators/FortuneSoldier.FortuneSoldier_C]
+NumPrimariesCheckpoint=1
+NumPrimariesSurvival=1
+bEnableDropWeapon=0
+bDestroyWeapon=0
+SpawnAtObjectiveTime=25
+MagGrabLimit=3
+NumSpawnsBeforeRandom=1
 
 [/Script/Insurgency.INSOutpostGameMode]
 InitialSupply=200
@@ -73,9 +110,6 @@ MaximumEnemies=18
 BotDPRMinimumTimeRemaining=25
 AIDifficulty=0.5
 bUseSpecialWaves=True
-;SpecialWaveFrequency=1
-;OutpostWaveConfigAssetPath=/Game/Game/Data/Gamemodes/OutpostWaveConfig_Default.OutpostWaveConfig_Default
-;OutpostWaveConfigAssetPath=/Zombies/Game/Data/GameModes/Zombies_Outpost.Zombies_Outpost
 
 [/CustomScenario/Blueprints/Operation/KWIOperationGamemode.KWIOperationGamemode_C]
 NumWaves=11
@@ -92,4 +126,42 @@ PreRoundTime=15
 bBots=1
 FriendlyBotQuota=4
 
+[/RoundProgress/Mutator/RoundProgress.RoundProgress_C]
+StructArray=(ScenarioString="Scenario_PowerPlant_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tideway_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Farmhouse_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tell_CS_Checkpoint_Security_2014",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Summit_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Bab_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Bab_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Citadel_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Citadel_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Crossing_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Crossing_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Farmhouse_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Farmhouse_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Gap_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Gap_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hideout_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hideout_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hillside_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hillside_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Ministry_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Ministry_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Outskirts_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Outskirts_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Precinct_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Precinct_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Refinery_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Refinery_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Summit_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Summit_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_PowerPlant_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_PowerPlant_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tell_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tell_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tideway_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tideway_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+SkippingMessage=Skipping to checkpoint.
+CheckpointSetMessage=Checkpoint complete! You will start from here next round!
 
