--- a/Insurgency/Saved/Config/WindowsServer/Game_Zombies.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Zombies.ini
@@ -3,13 +3,7 @@ bUseVehicleInsertion=True
 bBotsUseHumanLoadouts=False
 bLoseWhenAllPlayersDead=True
 bRestrictClassByPlayerLevel=False
-FriendlyBotQuota=4
 bForceSoloWaves=True
-SoloWaves=35
-MinimumEnemies=9
-MaximumEnemies=9
-InitialSupply=200
-MaximumSupply=200
 
 [/Script/AIModule.AIController]
 bAdvancedTactics=True
@@ -47,6 +41,7 @@ SoloWaveIncrementOnObjectiveCapture=5
 RoundTime=1200
 SoloRoundTime=1200
 DefendTimer=120
+;DefendTimer=1
 DefendTimerFinal=210
 RetreatTimer=10
 PostCaptureRushTimer=10
@@ -63,8 +58,6 @@ FinalCacheBotQuotaMultiplier=2.0
 SpawnProtectionTime=0
 
 [/Script/Insurgency.INSMultiplayerMode]
-InitialSupply=200
-MaximumSupply=200
 bBots=True
 PostRoundTime=5
 PostGameTime=5
@@ -72,7 +65,6 @@ bAllowThirdPersonSpectate=True
 bAllowDeathCamera=True
 
 [/Script/Insurgency.INSGameMode]
-bAllowRestrictedAreas=True
 bDeadSay=True
 bKillFeed=True
 bKillFeedSpectator=True
@@ -166,4 +158,43 @@ bUseVehicleInsertion=True
 PreRoundTime=15
 bBots=1
 FriendlyBotQuota=4
+
+[/RoundProgress/Mutator/RoundProgress.RoundProgress_C]
+StructArray=(ScenarioString="Scenario_PowerPlant_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tideway_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Farmhouse_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tell_CS_Checkpoint_Security_2014",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Summit_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Bab_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Bab_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Citadel_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Citadel_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Crossing_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Crossing_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Farmhouse_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Farmhouse_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Gap_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Gap_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hideout_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hideout_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hillside_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hillside_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Ministry_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Ministry_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Outskirts_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Outskirts_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Precinct_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Precinct_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Refinery_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Refinery_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Summit_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Summit_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_PowerPlant_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_PowerPlant_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tell_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tell_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tideway_Checkpoint_Insurgents",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Tideway_Checkpoint_Security",ObjectiveSkipIndex=(-2),StartSkipped=False)
+SkippingMessage=Skipping to checkpoint.
+CheckpointSetMessage=Checkpoint complete! You will start from here next round!
 
