--- a/Insurgency/Saved/Config/WindowsServer/Game_Zombies.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Zombies.ini
@@ -27,7 +27,7 @@ InitialSupply=100
 MaximumSupply=225
 SupplyGainFrequency=30
 GameTimeLimit=9000
-RoundLimit=2
+RoundLimit=4
 WinLimit=1
 bAutoAssignTeams=True
 bAutoBalanceTeams=False
@@ -72,6 +72,14 @@ bKillerInfo=True
 bKillerInfoRevealDistance=True
 
 [/Script/Insurgency.INSSurvivalGameMode]
+bSoloGame=True
+SoloRoundTime=1800
+RoundTimeExtension=1800
+SoloRoundTimeExtension=1800
+RoundTime=1800
+bForceSoloWaves=1
+DefaultReinforcementWaves=20
+SoloWaves=20
 bBots=True
 bForceSoloWaves=True
 AIDifficulty=1.0
@@ -81,7 +89,7 @@ MinimumEnemies=15
 MaximumEnemies=60
 MaxPlayersToScaleEnemyCount=6
 Solowaves=10
-NumWaves=7
+NumWaves=5
 SoloReinforcementTime=10
 SoloWaveIncrementOnObjectiveCapture=10
 bAllowFriendlyFire=False
@@ -130,7 +138,7 @@ MaximumBotsPerAdditionalObjective=2
 MaximumBotsPerCompletedWave=2
 SpawnProtectionTime=0
 NumWaves=8
-RoundLimit=1
+RoundLimit=3
 WinLimit=1
 InitialPrepareTimer=30
 PrepareTimer=45
