--- a/Insurgency/Saved/Config/WindowsServer/Game_Standard.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Standard.ini
@@ -128,6 +128,7 @@ FriendlyBotQuota=4
 
 [/RoundProgress/Mutator/RoundProgress.RoundProgress_C]
 StructArray=(ScenarioString="Scenario_PowerPlant_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
+StructArray=(ScenarioString="Scenario_Hideout_CS_Checkpoint_Security_CS",ObjectiveSkipIndex=(-2),StartSkipped=False)
 StructArray=(ScenarioString="Scenario_Tideway_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
 StructArray=(ScenarioString="Scenario_Farmhouse_CS_Checkpoint_Security_B",ObjectiveSkipIndex=(-2),StartSkipped=False)
 StructArray=(ScenarioString="Scenario_Tell_CS_Checkpoint_Security_2014",ObjectiveSkipIndex=(-2),StartSkipped=False)
