--- a/Insurgency/Saved/Config/WindowsServer/Game_Hardcore.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Hardcore.ini
@@ -210,3 +210,13 @@ MedicClass=Rifleman,Breacher,Commander,Observer,Gunner,Demolitions,Marksman,Advi
 ;Valid time that medic can revive dead player
 ReviveValidTime=180
 
+[/JoinLeaveMessage/Mutators/JoinLeaveMessage.JoinLeaveMessage_C]
+;Enable or disable join message
+bEnableJoinMessage=True
+;Message to appear when a player joins
+JoinMessage=%name% has joined the game.
+
+;Enable or disable leave message
+bEnableLeaveMessage=True
+;Message to appear when a player leaves
+LeaveMessage=%name% has left the game.
