--- a/Insurgency/Saved/Config/WindowsServer/Game_Zombies.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game_Zombies.ini
@@ -207,3 +207,13 @@ StructArray=(ScenarioString="Scenario_Tideway_Checkpoint_Security",ObjectiveSkip
 SkippingMessage=Skipping to checkpoint.
 CheckpointSetMessage=Checkpoint complete! You will start from here next round!
 
+[/JoinLeaveMessage/Mutators/JoinLeaveMessage.JoinLeaveMessage_C]
+;Enable or disable join message
+bEnableJoinMessage=True
+;Message to appear when a player joins
+JoinMessage=%name% has joined the game.
+
+;Enable or disable leave message
+bEnableLeaveMessage=True
+;Message to appear when a player leaves
+LeaveMessage=%name% has left the game.
